
FLX:
- (31/07/04) The 'bunch_(i|o)flow__' now works with all type of bunch.
- (01/08/04) Correcting little error.

HTP:
- (18/07/04) little improvements.

IDXQUE:
- (16/09/04) Using the core queue and no more the manage queue, to fit with 'IDXBTR'.

IDXBTQ:
- (15/09/04) Adapting to changes in 'IDXBTR'.
- (16/09/04) Adapting to changes in 'IDXBTR'.

IDXBTR
- Fixing bug in the 'tree_index_::Remove()' function.
- (15/09/04) The root is no more stored in the index, so an index can, in fact, contains several indexes.
- (16/09/04) The root is no more stored in the index, so an index can, in fact, contains several indexes.

LCK:
- Adding 'GetUnlocked()' method.
- (17/08/04) Some little changes in names.

MDR:
- (15/06/04) Adding some useful constants.

MMG:
- (19/07/04) Adapting to changes in 'FLW' library.

MMM:
- (14/07/04) Using the 'CIO' library instead of 'STF'.

MTX:
- (31/07/04) Adding a 'Delay' parameter for locking functions.

SCK:
- (31/07/04) A timeout yet launch an error.
-			 Rearranging some '#define'

SSNMNG:
- Using own row type for session id 'row__'.
- Adding 'sessions_manager_::IsValid()' method.
- Adding 'sessions_manager_::GetExpired()' methods.
- Adding navigation 'sessions_manager_::First()', 'sessions_manager_::Next()', ...) methods.
- (22/03/04) Fixing bug in session id creation.
- (15/09/04) Adapting to changes in 'IDXBTQ' library.
- (16/09/04) Adapting to changes in 'IDXBTQ' library.

STF:
- (24/05/04) Removing the console stuff (they are put in 'CIO' library).
- (24/05/04) Adating to changes in 'FLW' library.
- (24/05/04) Renaming the objects ('stream...' instead'(i|o)stream...', removing one tailing '_')

STR:
- (16/08/04) Fixing bug in 'ToLF' function.

TOL:
- Adding the 'E_DISCLOSE_(_)' macro.
- (05/05/04) Adding a 'Clock()' temporary workaround for CW.
- (24/05/04) Using 'cio' library instead of 'stf'.
- (24/06/04) Adding 'E_TTYPEDEF' macro.
- (31/07/04) Adding 'Delay' function and 'Defer()' with delay parameter.